--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>Tomato Timer</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <div id="buttons">
             <button id="study-btn">Study</button>
             <button id="break-btn">Break</button>
-            <button id="start-stop-btn" style="display: none;">Start/Stop</button>
+            <button id="start-stop-btn">Start/Stop</button>
         </div>
         <div id="session-count">
             <p>Study Sessions: <span id="study-count">0</span></p>
@@ -24,5 +24,6 @@
             <button id="dark-theme">Dark</button>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
